fix: alignment of the cookie banner buttons

--- a/site/_scss/layouts/devsite-theme.scss
+++ b/site/_scss/layouts/devsite-theme.scss
@@ -875,4 +875,9 @@ $ROW_PADDING_MOBILE: 0 1.875rem;
   }
 }
 
+.cookie-banner__controls > button:last-child {
+  margin-left: 0;
+  margin-right: 1rem;
+}
+
 /* stylelint-enable */
